# pulumi-alicloud

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Gopkg.toml  Makefile  Makefile.github  README.md  go.mod  go.sum  mise.toml  resources.go
sdk/python/: README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_alicloud/: README.md  __init__.py  _inputs.py  _tables.py  get_account.py  get_caller_identity.py  get_file_crc64_checksum.py  get_msc_sub_contact_verification_message.py  get_msc_sub_contacts.py  get_msc_sub_contracts.py  get_msc_sub_subscriptions.py  get_msc_sub_webhooks.py  get_regions.py  get_zones.py  milvus_instance.py  msc_sub_contract.py  msc_sub_subscription.py  msc_sub_webhook.py  open_api_explorer_api_mcp_server.py  outputs.py  polar_db_extension.py  provider.py  star_rocks_instance.py  tables.py
sdk/python/pulumi_alicloud/ackone/: __init__.py  _inputs.py  cluster.py  membership_attachment.py  outputs.py
sdk/python/pulumi_alicloud/actiontrail/: README.md  __init__.py  advanced_query_template.py  get_consumer_groups.py  get_global_events_storage_region.py  get_history_delivery_jobs.py  get_instances.py  get_sasl_acls.py  get_sasl_users.py  get_topics.py  get_trails.py  get_trails_deprecated.py  global_events_storage_region.py  history_delivery_job.py  outputs.py  trail.py  trail_deprecated.py
sdk/python/pulumi_alicloud/adb/: __init__.py  _inputs.py  account.py  backup_policy.py  cluster.py  connection.py  db_cluster.py  (+9 more)
(+23289 files in other folders)
