[project]
  name = "pulumi_alicloud"
  description = "A Pulumi package for creating and managing AliCloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.136.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "alicloud"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "3.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-alicloud"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_alicloud = ["py.typed", "pulumi-plugin.json"]
